nut add stakater reload for configmap

--- a/cluster/apps/monitoring/nut/helm-release.yaml
+++ b/cluster/apps/monitoring/nut/helm-release.yaml
@@ -28,6 +28,8 @@ spec:
       # - key: "thin-client"
       - effect: NoSchedule
         operator: "Exists"
+    podAnnotations:
+      configmap.reloader.stakater.com/reload: "nut-master-network-ups-tools-config"
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
