--- a/cluster/apps/monitoring/nut/helm-release.yaml
+++ b/cluster/apps/monitoring/nut/helm-release.yaml
@@ -30,7 +30,7 @@ spec:
         operator: "Exists"
     podAnnotations:
       configmap.reloader.stakater.com/reload: "nut-master-network-ups-tools-config"
-      descheduler.alpha.kubernetes.io/evict: true
+      descheduler.alpha.kubernetes.io/evict: "true"
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
