prom alertmanager setup pushover

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -11,6 +11,8 @@ stringData:
     SECRET_PLEX_CLAIM_TOKEN: ENC[AES256_GCM,data:uekA7Tvb8EsGAaKyrG4HfR49OkAzKE5JS0w=,iv:Mh3fLX+knG82Ep8zyDeUVMCgsMSMsW1w2iN1w5NsgAk=,tag:KMoBkabdFkQ98MSn5U06Rw==,type:str]
     SECRET_MINIO_ACCESS_KEY: ENC[AES256_GCM,data:3iY4gng=,iv:dtue/HqxpH545PKoxB8aAfgiGKXzyXvFopMgFlo78fA=,tag:LeKi4Dbd3U2UnG3ip5JUMg==,type:str]
     SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:pdqk1RCffW03Ikyb7g1qLC+ugSM=,iv:bo6OLDUaC84dqajUX7WiQXFfTXOzdhQ2xZ5Ztz3X6Pk=,tag:BvyZOhrNmAojKQ+5AX25PQ==,type:str]
+    SECRET_PUSHOVER_ALERT_MANAGER_APIKEY: ENC[AES256_GCM,data:8f3tYhw3TIg03GRsXIhMtwMmJsUzViCIi/MtHmzO,iv:y/dzVroL3lV2n2AowUPFgIFGY939xea3fkMBcV9jq74=,tag:phinjiB2yC2nb/xy7d3Gqw==,type:str]
+    SECRET_PUSHOVER_USERKEY: ENC[AES256_GCM,data:nSynzAZ7P3Yukfu6LB/fuf2N4ku+armv0LaAQYcm,iv:gHvo/DK9bK6eKWOp+Fvs0Easu3GsKoIHs5nrr6l7w0A=,tag:IHfI8Q3JSAArRvIw+LQJGw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +28,8 @@ sops:
             aFZoWWozRks3aDUwanpQanRGNG55YTAK78zzVPikMVd+Lw6W6ySD5utOFM65uAKK
             dVyYa7NeAQjTL9/p/XMt3HEkysHnyi7740zb3k9jfvPy6OSNBFWjkw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-20T20:37:02Z"
-    mac: ENC[AES256_GCM,data:LuhLd/blb1/iCWC3ozR8UPUCQvpvaOjQXGqzoVDd1VD06brwr/ZKte36He9/QnjlgaQD5BXmVNhbBVjdqfyw8aRUATiYRBYG1Mow8rdopttDAgDHhXfeLoAJiMzv2BZLpfwT9LoVD/Uon8pFNvOPfW85Z8NGgtfDmwWxg2s4VUs=,iv:josNO6vD2jN+F/NwqXBp7uG7SR0cBhkjsZ1nGoBfHMA=,tag:gYSKGv8FatZ/Rr57BV31Og==,type:str]
+    lastmodified: "2022-06-18T12:54:24Z"
+    mac: ENC[AES256_GCM,data:fsFPxthV3/UHA5GMSlizQ4zd/pxfaEgpkLZyr0pUtgxfH/IYiOvyPR3QFPLjSifhKl37lHw5zD+t0N6K3sTjE+jwfhM4xc/4esRkyWppiFt+567d16eTO6OrdCevp/66Vcl5amJ96eGifffLGLvtN0DCYAGQaLnfYIE2u4XLPWE=,iv:xr0NYvZc3dn4N89iLtGT6c7RhxgxLrYgecswwdgEb6k=,tag:f80C7kC/FOPY0aZHvVJTGw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
