--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -35,66 +35,66 @@ spec:
       config:
         global:
           resolve_timeout: 5m
-        # receivers:
-        #   - name: "null"
-        #   - name: "pushover"
-        #     pushover_configs:
-        #       - token: "${SECRET_PUSHOVER_ALERT_MANAGER_APIKEY}"
-        #         user_key: "${SECRET_PUSHOVER_USERKEY}"
-        #         send_resolved: true
-        #         html: true
-        #         priority: |-
-        #           {{ if eq .Status "firing" }}1{{ else }}0{{ end }}
-        #         url_title: View in Alert Manager
-        #         title: |-
-        #           [{{ .Status | toUpper -}}
-        #           {{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{- end -}}
-        #           ] {{ .CommonLabels.alertname }}
-        #         message: |-
-        #           {{- range .Alerts }}
-        #             {{- if ne .Labels.severity "" }}
-        #               <b>Severity:</b> <i>{{ .Labels.severity }}</i>
-        #             {{- else }}
-        #               <b>Severity:</b> <i>N/A</i>
-        #             {{- end }}
-        #             {{- if ne .Annotations.description "" }}
-        #               <b>Description:</b> <i>{{ .Annotations.description }}</i>
-        #             {{- else if ne .Annotations.summary "" }}
-        #               <b>Summary:</b> <i>{{ .Annotations.summary }}</i>
-        #             {{- else if ne .Annotations.message "" }}
-        #               <b>Message:</b> <i>{{ .Annotations.message }}</i>
-        #             {{- else }}
-        #               <b>Description:</b> <i>N/A</i>
-        #             {{- end }}
-        #             {{- if gt (len .Labels.SortedPairs) 0 }}
-        #               <b>Details:</b>
-        #               {{- range .Labels.SortedPairs }}
-        #                 • <b>{{ .Name }}:</b> <i>{{ .Value }}</i>
-        #               {{- end }}
-        #             {{- end }}
-        #           {{- end }}
-        #   - name: "nodered"
-        #     webhook_configs:
-        #       - url: "http://node-red.home:1880/power-outage"
-        #         send_resolved: true
-        # route:
-        #   group_by: ["alertname", "job"]
-        #   group_wait: 30s
-        #   group_interval: 5m
-        #   repeat_interval: 6h
-        #   receiver: "pushover"
-        #   routes:
-        #     - receiver: "null"
-        #       matchers:
-        #         - alertname =~ "InfoInhibitor|Watchdog"
-        #     - receiver: "pushover"
-        #       matchers:
-        #         - severity = "critical"
-        #       continue: true
-        #     - receiver: "nodered"
-        #       matchers:
-        #         - alertname = "UPSOnBattery"
-        #       continue: true
+        receivers:
+          - name: "null"
+          - name: "pushover"
+            pushover_configs:
+              - token: "${SECRET_PUSHOVER_ALERT_MANAGER_APIKEY}"
+                user_key: "${SECRET_PUSHOVER_USERKEY}"
+                send_resolved: true
+                html: true
+                priority: |-
+                  {{ if eq .Status "firing" }}1{{ else }}0{{ end }}
+                url_title: View in Alert Manager
+                title: |-
+                  [{{ .Status | toUpper -}}
+                  {{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{- end -}}
+                  ] {{ .CommonLabels.alertname }}
+                message: |-
+                  {{- range .Alerts }}
+                    {{- if ne .Labels.severity "" }}
+                      <b>Severity:</b> <i>{{ .Labels.severity }}</i>
+                    {{- else }}
+                      <b>Severity:</b> <i>N/A</i>
+                    {{- end }}
+                    {{- if ne .Annotations.description "" }}
+                      <b>Description:</b> <i>{{ .Annotations.description }}</i>
+                    {{- else if ne .Annotations.summary "" }}
+                      <b>Summary:</b> <i>{{ .Annotations.summary }}</i>
+                    {{- else if ne .Annotations.message "" }}
+                      <b>Message:</b> <i>{{ .Annotations.message }}</i>
+                    {{- else }}
+                      <b>Description:</b> <i>N/A</i>
+                    {{- end }}
+                    {{- if gt (len .Labels.SortedPairs) 0 }}
+                      <b>Details:</b>
+                      {{- range .Labels.SortedPairs }}
+                        • <b>{{ .Name }}:</b> <i>{{ .Value }}</i>
+                      {{- end }}
+                    {{- end }}
+                  {{- end }}
+          # - name: "nodered"
+          #   webhook_configs:
+          #     - url: "http://node-red.home:1880/power-outage"
+          #       send_resolved: true
+        route:
+          group_by: ["alertname", "job"]
+          group_wait: 30s
+          group_interval: 5m
+          repeat_interval: 6h
+          receiver: "pushover"
+          routes:
+            - receiver: "null"
+              matchers:
+                - alertname =~ "InfoInhibitor|Watchdog"
+            - receiver: "pushover"
+              matchers:
+                - severity = "critical"
+              continue: true
+           #  - receiver: "nodered"
+           #    matchers:
+           #      - alertname = "UPSOnBattery"
+           #    continue: true
         inhibit_rules:
           - source_matchers:
               - severity = "critical"
