tweak resources from goldilocks

--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -120,11 +120,11 @@ spec:
     resources:
       requests:
       #  gpu.intel.com/i915: 1
-        cpu: 100m
-        memory: 2000Mi
+        cpu: 1000m
+        memory: 14G
       limits:
       #  gpu.intel.com/i915: 1
-        memory: 10000Mi
+        memory: 14G
     addons:
       promtail:
         enabled: true
