--- a/cluster/apps/monitoring/nut/helm-release.yaml
+++ b/cluster/apps/monitoring/nut/helm-release.yaml
@@ -20,8 +20,7 @@ spec:
   values:
     image:
       repository: ghcr.io/k8s-at-home/network-ups-tools
-      # tag: v2.8.0
-      tag: v2.7.4-2479-g86a32237
+      tag: v2.8.0
     securityContext:
       privileged: true
     controllerType: daemonset
@@ -69,12 +68,12 @@ spec:
             port = auto
             # pollinterval = 15
             desc = "APC Back-UPS Pro 1500"
-              vendorid = "051D"
-            productid = "0002"
-            product = "Back-UPS RS 1500G FW:865.L9 .D USB FW:L9"
+            # vendorid = "051D"
+            # productid = "0002"
+            # product = "Back-UPS RS 1500G FW:865.L9 .D USB FW:L9"
             serial = "4B2107P01305"
-            vendor = "American Power Conversion"
-            bus = "001"
+            # vendor = "American Power Conversion"
+            # bus = "001"
           # [ups-2]
           #   driver = snmp-ups
           #   privProtocol=AES
