--- a/cluster/apps/media/tubesync/helm-release.yaml
+++ b/cluster/apps/media/tubesync/helm-release.yaml
@@ -23,8 +23,8 @@ spec:
       # tag: "v0.10.0"
     env:
       TZ: "${TIMEZONE}"
-      UID: 8675309
-      GID: 8675309
+      # UID: 8675309
+      # GID: 8675309
     service:
       main:
       ports:
@@ -40,7 +40,7 @@ spec:
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
         hosts:
-          - host: "esphome.${SECRET_DOMAIN}"
+          - host: "tubesync.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
