try tubesync latest tag

--- a/cluster/apps/media/tubesync/helm-release.yaml
+++ b/cluster/apps/media/tubesync/helm-release.yaml
@@ -21,6 +21,7 @@ spec:
   values:
     image:
       repository: ghcr.io/meeb/tubesync
+      tag: "latest"
       # tag: "v0.10.0"
     env:
       TZ: "${TIMEZONE}"
