--- a/cluster/apps/media/youtubedl/helm-release.yaml
+++ b/cluster/apps/media/youtubedl/helm-release.yaml
@@ -25,6 +25,12 @@ spec:
       tag: "nightly-2022-06-22"
     env:
       TZ: "${TIMEZONE}"
+      ALLOW_CONFIG_MUTATIONS: 'true'
+      # ytdl_mongodb_connection_string: 'mongodb://ytdl-mongo-db:27017'
+      # ytdl_use_local_db: 'false'
+      ytdl_use_local_db: 'true'
+      use_local_db: 'true'
+      write_ytdl_config: 'true'
       # UID: 8675309
       # GID: 8675309
     ingress:
