youtubedl startup probe to match chart values

--- a/cluster/apps/media/youtubedl/helm-release.yaml
+++ b/cluster/apps/media/youtubedl/helm-release.yaml
@@ -66,10 +66,13 @@ spec:
         existingClaim: nfs-media-pvc
         mountPath: /app/video
         subPath: YoutubeDL
-    startupProbe:
-      enabled: true
-      failureThreshold: 20
-      periodSeconds: 10
+    probes:
+      startup:
+        enabled: true
+        custom: true
+        spec:
+          failureThreshold: 20
+          periodSeconds: 10
     resources:
       requests:
         cpu: 100m
