--- a/cluster/apps/monitoring/uptime/helm-release.yaml
+++ b/cluster/apps/monitoring/uptime/helm-release.yaml
@@ -5,11 +5,11 @@ metadata:
   name: uptime
   namespace: monitoring
 spec:
-  dependsOn:
-    # - name: longhorn
-    #  namespace: longhorn-system
-    - name: traefik
-      namespace: traefik
+  # dependsOn:
+  #   - name: longhorn
+  #    namespace: longhorn-system
+  #   - name: traefik
+  #     namespace: traefik
   maxHistory: 3
   interval: 10m0s
   suspend: false
