--- a/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
@@ -24,7 +24,7 @@ spec:
     image:
       # repository: ghcr.io/zwave-js/zwavejs2mqtt
       # tag: 7.2.0
-      repository: zwave-js/zwave-js-ui
+      repository: zwavejs/zwave-js-ui
       tag: 8.5.1
     env:
       TZ: "${TIMEZONE}"
