--- a/cluster/apps/media/plex/helm-release.yaml
+++ b/cluster/apps/media/plex/helm-release.yaml
@@ -27,10 +27,11 @@ spec:
       # ALLOWED_NETWORKS: "10.0.0.0/8,172.16.0.0/16"
       PLEX_CLAIM: "${SECRET_PLEX_CLAIM_TOKEN}"
     podSecurityContext:
-      runAsUser: 568
-      runAsGroup: 568
-      fsGroup: 568
-      fsGroupChangePolicy: "OnRootMismatch"
+      # runAsUser: 568
+      # runAsGroup: 568
+      # fsGroup: 568
+      # fsGroupChangePolicy: "OnRootMismatch"
+      supplementalGroups: [44, 109, 100, 10000]
     #   supplementalGroups:
     #     - 44
     #     - 109
