--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -22,6 +22,7 @@ spec:
   values:
     image:
       name: ghcr.io/k8s-at-home/traefik
+      tag: 2.6.7
     deployment:
       kind: Deployment
       replicas: 1
